2010-03-27	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.14
	* Do not use += in configure, fixes bug 2972100
	* Change gzdopen() from wb+ to wb, fixes bug 2976146
	* Do not strcat into uninitialized data, fixes bug 2919946
	* Add missing db_sql prototypes, and Sun Studio compatibility, fixes bug 2888035

2010-03-16	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.14

2010-02-26	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.14-rc3
	* Fixed some AC_ARG_WITH magic
	* Define ENOATTR if needed by Hannes von Haugwitz <hannes@vonhaugwitz.com>

2010-02-25	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.14-rc2
	* Fix xattrs and selinux bits by Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Released version 0.14-rc3

2010-02-25	Steve Grubb <sgrubb@redhat.com>
	* Additional checks for snprintf.c
	* Fix off64_t and other size warnings
	* Correct linker settings

2010-02-24	Richard van den Berg  <richard@vdberg.org>
	* Re-enable large file support on 32 bit systems by Steve Grubb <sgrubb@redhat.com>

2010-02-23	Richard van den Berg  <richard@vdberg.org>
	* Show -D in --help by Steve Grubb <sgrubb@redhat.com>
	* Refix line->attr&DB_LINKNAME is always true issue by Hannes von Haugwitz <hannes@vonhaugwitz.com>

2010-02-22	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.14-rc1
	* Changed version to post-0.14-rc1

2010-02-21	Richard van den Berg  <richard@vdberg.org>
	* Replaced snprintf.c with the version from rsync-2.6.9

2010-02-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix checksums letter
	* Always save the permission to database
	* summarize_changes: Re-enabled file-type detection for removed files
	* Fix line->attr&DB_LINKNAME is always true issue
	* Remove localignorelist for changed nodes
	* Disable DB_ACL bit if acls are not supported

2010-02-18	Richard van den Berg  <richard@vdberg.org>
	* Adjust building of fopen.c by Steve Grubb <sgrubb@redhat.com>