@@ -32,6 +32,7 @@
 #define UNIMPLEMENTED_FUNCTION_ERROR 16
 #define INVALID_CONFIGURELINE_ERROR 17
 #define IO_ERROR 18
+#define VERSION_MISMATCH_ERROR 19
 
 /* Errorcodes */
 #define HASH_ALGO_ERROR 30
