@@ -4,6 +4,7 @@
 	* Change gzdopen() from wb+ to wb, fixes bug 2976146
 	* Do not strcat into uninitialized data, fixes bug 2919946
 	* Add missing db_sql prototypes, and Sun Studio compatibility, fixes bug 2888035
+	* Initialize gcrypt properly, fixes bug 2763470
 
 2010-03-16	Richard van den Berg  <richard@vdberg.org>
 	* Released version 0.14
